--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,69 +14,204 @@
                     <button class="btn btn-info rounded-0 btn-loader"> Add New </button>
                 </div>
             </div>
-        </div>
-   
+        </div>   
     </div>
-
     <div class="card-body">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="card mt-2">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
 
-                        <p class="card-text">
-                            Some quick example text to build on the card title and make up the bulk of the card's
-                            content.
-                        </p>
-
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
-                    </div>
-                </div>
-
-                <div class="card card-primary card-outline mt-2">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-
-                        <p class="card-text">
-                            Some quick example text to build on the card title and make up the bulk of the card's
-                            content.
-                        </p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
-                    </div>
-                </div>
-                <!-- /.card -->
-            </div>
-            <!-- /.col-md-6 -->
-            <div class="col-lg-6">
-                <div class="card mt-2">
-                    <div class="card-header">
-                        <h5 class="m-0">Featured</h5>
-                    </div>
-                    <div class="card-body">
-                        <h6 class="card-title">Special title treatment</h6>
-
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-
-                <div class="card card-primary card-outline mt-2">
-                    <div class="card-header">
-                        <h5 class="m-0">Featured</h5>
-                    </div>
-                    <div class="card-body">
-                        <h6 class="card-title">Special title treatment</h6>
-
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <!-- /.col-md-6 -->
-        </div>
+        <div class="table-responsive">
+            <table class="table table-bordered text-center">
+                <tbody>
+                    <tr>
+                        <th>Normal</th>
+                        <th>Large <code>.btn-lg</code></th>
+                        <th>Small <code>.btn-sm</code></th>
+                        <th>Extra Small <code>.btn-xs</code></th>
+                        <th>Flat <code>.btn-flat</code></th>
+                        <th>Disabled <code>.disabled</code></th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button type="button" class="btn btn-block btn-default">Default</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-default btn-lg">Default</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-default btn-sm">Default</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-default btn-xs">Default</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-default btn-flat">Default</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-default disabled">Default</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button type="button" class="btn btn-block btn-primary">Primary</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-primary btn-lg">Primary</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-primary btn-sm">Primary</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-primary btn-xs">Primary</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-primary btn-flat">Primary</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-primary disabled">Primary</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button type="button" class="btn btn-block btn-secondary">Secondary</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-secondary btn-lg">Secondary</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-secondary btn-sm">Secondary</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-secondary btn-xs">Secondary</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-secondary btn-flat">Secondary</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-secondary disabled">Secondary</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button type="button" class="btn btn-block btn-success">Success</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-success btn-lg">Success</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-success btn-sm">Success</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-success btn-xs">Success</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-success btn-flat">Success</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-success disabled">Success</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button type="button" class="btn btn-block btn-info">Info</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-info btn-lg">Info</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-info btn-sm">Info</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-info btn-xs">Info</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-info btn-flat">Info</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-info disabled">Info</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button type="button" class="btn btn-block btn-danger">Danger</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-danger btn-lg">Danger</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-danger btn-sm">Danger</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-danger btn-xs">Danger</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-danger btn-flat">Danger</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-danger disabled">Danger</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button type="button" class="btn btn-block btn-warning">Warning</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-warning btn-lg">Warning</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-warning btn-sm">Warning</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-warning btn-xs">Warning</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-warning btn-flat">Warning</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-warning disabled">Warning</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button type="button" class="btn btn-block btn-light">Light</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-light btn-lg">Light</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-light btn-sm">Light</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-light btn-xs">Light</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-light btn-flat">Light</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-light disabled">Light</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button type="button" class="btn btn-block btn-dark">Dark</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-dark btn-lg">Dark</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-dark btn-sm">Dark</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-dark btn-xs">Dark</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-dark btn-flat">Dark</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-block btn-dark disabled">Dark</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+  </div>
 
     </div>
 </div>
