--- a/Views/Shared/Components/_Nav.cshtml
+++ b/Views/Shared/Components/_Nav.cshtml
@@ -1,12 +1,11 @@
 ﻿
-<nav class="main-header navbar navbar-expand navbar-white navbar-light text-sm">
+<nav class="navbar navbar-expand-lg bg-body-tertiary text-sm fixed-top">
     <!-- Left navbar links -->
 
-            <a class="mx-2" data-widget="pushmenu" href="#" role="button" id="sidebarToggle">
-                <i class="fas fa-bars"></i>
-            </a>
+    <button class="mx-2 btn btn-outline-primary sidebarToggle moboleSaid" style="width: 3rem; text-align: center;">
+        <i class="fas fa-bars"></i>
+    </button>
    
-
     <div class="content-header mt-1  navbar-nav me-auto  mb-lg-0">
         <div class="container-fluid">
             <div class="row mb-2">
@@ -20,17 +19,35 @@
         </div><!-- /.container-fluid -->
     </div>
 
+
+
+
     <!-- Right navbar links -->
-    <ul class="navbar-nav ml-auto">
+    <div class="row ml-auto">
 
         <!-- Theam Dropdown Menu -->
-        <div class="form-check form-switch mx-4">
+        <div class="form-check form-switch mx-4 col">
             <input class="form-check-input" type="checkbox" role="switch" id="darkmood">
             <label class="form-check-label" for="darkmood">darkmood</label>
         </div>
 
+        <div class="dropdown col mt-2">
+            <a href="#" class="d-flex align-items-center  text-decoration-none dropdown-toggle"
+               data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2" />
+                <strong>mdo</strong>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
+                <li><a class="dropdown-item" href="#">New project...</a></li>
+                <li><a class="dropdown-item" href="#">Settings</a></li>
+                <li><a class="dropdown-item" href="#">Profile</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li><a class="dropdown-item" href="#">Sign out</a></li>
+            </ul>
+        </div>
+
         <!-- ChangeLang Dropdown Menu -->
-        <li class="nav-item dropdown">
+        <div class="nav-item dropdown col mt-2">
             <div class="dropdown">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
                     Localization
@@ -41,10 +58,10 @@
                     <li><a asp-controller="Home" asp-action="ChangeLanguage" asp-route-culture="fr-FR" class="dropdown-item"><i class="flag-icon flag-icon-gb"></i> French</a></li>
                 </ul>
             </div>
-        </li>
+        </div>
 
         <!-- Notifications Dropdown Menu -->
-        <li class="nav-item dropdown">
+        <div class="nav-item dropdown col mt-2">
             <a class="nav-link" data-bs-auto-close="true" data-bs-toggle="dropdown" href="#">
                 <i class="far fa-bell"></i>
                 <span class="badge badge-warning navbar-badge">15</span>
@@ -69,14 +86,14 @@
                 <div class="dropdown-divider"></div>
                 <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
             </div>
-        </li>
+        </div>
 
         <!-- fullscreen -->
-        <li class="nav-item">
+        <div class="nav-item col mt-2">
             <a id="fullscreen-toggle" class="nav-link" data-widget="fullscreen" href="#" role="button">
                 <i class="fas fa-expand-arrows-alt"></i>
             </a>
-        </li>
+        </div>
 
-    </ul>
+    </div>
 </nav>
