--- a/wwwroot/NestAdminTemplet/css/NestTemplet.css
+++ b/wwwroot/NestAdminTemplet/css/NestTemplet.css
@@ -1,392 +1,16 @@
 ﻿
-:root, [data-bs-theme=light] {
-    --bs-blue: #0d6efd;
-    --bs-indigo: #6610f2;
-    --bs-purple: #6f42c1;
-    --bs-pink: #d63384;
-    --bs-red: #dc3545;
-    --bs-orange: #fd7e14;
-    --bs-yellow: #ffc107;
-    --bs-green: #198754;
-    --bs-teal: #20c997;
-    --bs-cyan: #0dcaf0;
-    --bs-black: #000;
-    --bs-white: #fff;
-    --bs-gray: #6c757d;
-    --bs-gray-dark: #343a40;
-    --bs-gray-100: #f8f9fa;
-    --bs-gray-200: #e9ecef;
-    --bs-gray-300: #dee2e6;
-    --bs-gray-400: #ced4da;
-    --bs-gray-500: #adb5bd;
-    --bs-gray-600: #6c757d;
-    --bs-gray-700: #495057;
-    --bs-gray-800: #343a40;
-    --bs-gray-900: #212529;
-    --bs-primary: #0d6efd;
-    --bs-secondary: #6c757d;
-    --bs-success: #198754;
-    --bs-info: #0dcaf0;
-    --bs-warning: #ffc107;
-    --bs-danger: #dc3545;
-    --bs-light: #f8f9fa;
-    --bs-dark: #212529;
-    --bs-primary-rgb: 13,110,253;
-    --bs-secondary-rgb: 108,117,125;
-    --bs-success-rgb: 25,135,84;
-    --bs-info-rgb: 13,202,240;
-    --bs-warning-rgb: 255,193,7;
-    --bs-danger-rgb: 220,53,69;
-    --bs-light-rgb: 248,249,250;
-    --bs-dark-rgb: 33,37,41;
-    --bs-primary-text-emphasis: #052c65;
-    --bs-secondary-text-emphasis: #2b2f32;
-    --bs-success-text-emphasis: #0a3622;
-    --bs-info-text-emphasis: #055160;
-    --bs-warning-text-emphasis: #664d03;
-    --bs-danger-text-emphasis: #58151c;
-    --bs-light-text-emphasis: #495057;
-    --bs-dark-text-emphasis: #495057;
-    --bs-primary-bg-subtle: #cfe2ff;
-    --bs-secondary-bg-subtle: #e2e3e5;
-    --bs-success-bg-subtle: #d1e7dd;
-    --bs-info-bg-subtle: #cff4fc;
-    --bs-warning-bg-subtle: #fff3cd;
-    --bs-danger-bg-subtle: #f8d7da;
-    --bs-light-bg-subtle: #fcfcfd;
-    --bs-dark-bg-subtle: #ced4da;
-    --bs-primary-border-subtle: #9ec5fe;
-    --bs-secondary-border-subtle: #c4c8cb;
-    --bs-success-border-subtle: #a3cfbb;
-    --bs-info-border-subtle: #9eeaf9;
-    --bs-warning-border-subtle: #ffe69c;
-    --bs-danger-border-subtle: #f1aeb5;
-    --bs-light-border-subtle: #e9ecef;
-    --bs-dark-border-subtle: #adb5bd;
-    --bs-white-rgb: 255,255,255;
-    --bs-black-rgb: 0,0,0;
-    --bs-font-sans-serif: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    --bs-font-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
-    --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-    --bs-body-font-family: var(--bs-font-sans-serif);
-    --bs-body-font-size: 1rem;
-    --bs-body-font-weight: 400;
-    --bs-body-line-height: 1.5;
-    --bs-body-color: #212529;
-    --bs-body-color-rgb: 33,37,41;
-    --bs-body-bg: #ededed;
-    --bs-body-bg-rgb: 255,255,255;
-    --bs-emphasis-color: #000;
-    --bs-emphasis-color-rgb: 0,0,0;
-    --bs-secondary-color: rgba(33, 37, 41, 0.75);
-    --bs-secondary-color-rgb: 33,37,41;
-    --bs-secondary-bg: #e9ecef;
-    --bs-secondary-bg-rgb: 233,236,239;
-    --bs-tertiary-color: rgba(33, 37, 41, 0.5);
-    --bs-tertiary-color-rgb: 33,37,41;
-    --bs-tertiary-bg: #f8f9fa;
-    --bs-tertiary-bg-rgb: 248,249,250;
-    --bs-heading-color: inherit;
-    --bs-link-color: #0d6efd;
-    --bs-link-color-rgb: 13,110,253;
-    --bs-link-decoration: underline;
-    --bs-link-hover-color: #0a58ca;
-    --bs-link-hover-color-rgb: 10,88,202;
-    --bs-code-color: #d63384;
-    --bs-highlight-color: #212529;
-    --bs-highlight-bg: #fff3cd;
-    --bs-border-width: 1px;
-    --bs-border-style: solid;
-    --bs-border-color: #dee2e6;
-    --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
-    --bs-border-radius: 0.375rem;
-    --bs-border-radius-sm: 0.25rem;
-    --bs-border-radius-lg: 0.5rem;
-    --bs-border-radius-xl: 1rem;
-    --bs-border-radius-xxl: 2rem;
-    --bs-border-radius-2xl: var(--bs-border-radius-xxl);
-    --bs-border-radius-pill: 50rem;
-    --bs-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    --bs-box-shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
-    --bs-box-shadow-lg: 0 1rem 3rem rgba(0, 0, 0, 0.175);
-    --bs-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
-    --bs-focus-ring-width: 0.25rem;
-    --bs-focus-ring-opacity: 0.25;
-    --bs-focus-ring-color: rgba(13, 110, 253, 0.25);
-    --bs-form-valid-color: #198754;
-    --bs-form-valid-border-color: #198754;
-    --bs-form-invalid-color: #dc3545;
-    --bs-form-invalid-border-color: #dc3545
+* {
+    transition: background 0.5s ease-out 0.2s;
 }
 
-[data-bs-theme=dark] {
-    --bs-blue: #ebf1ff;
-    --bs-indigo: #99efff;
-    --bs-purple: #90bdde;
-    --bs-pink: #29cc7a;
-    --bs-red: #23c5ba;
-    --bs-orange: #02b1ff;
-    --bs-yellow: #ffde52;
-    --bs-green: #e7694c;
-    --bs-teal: #df36ff;
-    --bs-cyan: #f32f0f;
-    --bs-black: #fff;
-    --bs-white: #343a40;
-    --bs-gray: #93908d;
-    --bs-gray-dark: #cb4fb6;
-    --bs-gray-100: #070605;
-    --bs-gray-200: #161312;
-    --bs-gray-300: #21211f;
-    --bs-gray-400: #2d2d2b;
-    --bs-gray-500: #3a3a38;
-    --bs-gray-600: #474745;
-    --bs-gray-700: #545352;
-    --bs-gray-800: #61605f;
-    --bs-gray-900: #6e6d6c;
-    --bs-primary: #ebf1ff;
-    --bs-secondary: #474745;
-    --bs-success: #e7694c;
-    --bs-info: #f32f0f;
-    --bs-warning: #ffde52;
-    --bs-danger: #23c5ba;
-    --bs-light: #070605;
-    --bs-dark: #6e6d6c;
-    --bs-primary-rgb: 235,241,255;
-    --bs-secondary-rgb: 71,71,69;
-    --bs-success-rgb: 231,105,76;
-    --bs-info-rgb: 243,47,15;
-    --bs-warning-rgb: 255,222,82;
-    --bs-danger-rgb: 35,197,186;
-    --bs-light-rgb: 52, 58, 64;
-    --bs-dark-rgb: 110,109,108;
-    --bs-primary-text-emphasis: #14ff86;
-    --bs-secondary-text-emphasis: #6db0c4;
-    --bs-success-text-emphasis: #14ff86;
-    --bs-info-text-emphasis: #12e6ff;
-    --bs-warning-text-emphasis: #ff5000;
-    --bs-danger-text-emphasis: #12e6ff;
-    --bs-light-text-emphasis: #ffeb23;
-    --bs-dark-text-emphasis: #f4baba;
-    --bs-primary-bg-subtle: #302d2a;
-    --bs-secondary-bg-subtle: #93908d;
-    --bs-success-bg-subtle: #df36ff;
-    --bs-info-bg-subtle: #f32f0f;
-    --bs-warning-bg-subtle: #ffde52;
-    --bs-danger-bg-subtle: #23c5ba;
-    --bs-light-bg-subtle: #f9f9f9;
-    --bs-dark-bg-subtle: #6e6d6c;
-    --bs-primary-border-subtle: #4f4f4f;
-    --bs-secondary-border-subtle: #6e6d6c;
-    --bs-success-border-subtle: #f32f0f;
-    --bs-info-border-subtle: #e7694c;
-    --bs-warning-border-subtle: #ffde52;
-    --bs-danger-border-subtle: #23c5ba;
-    --bs-light-border-subtle: #f9f9f9;
-    --bs-dark-border-subtle: #6e6d6c;
-    --bs-white-rgb: 0,0,0;
-    --bs-black-rgb: 255,255,255;
-    --bs-font-sans-serif: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    --bs-font-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
-    --bs-gradient: linear-gradient(180deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0));
-    --bs-body-font-family: var(--bs-font-sans-serif);
-    --bs-body-font-size: 1rem;
-    --bs-body-font-weight: 400;
-    --bs-body-line-height: 1.5;
-    --bs-body-color: #d5d5d5;
-    --bs-body-color-rgb: 213,213,213;
-    --bs-body-bg: #454d55;
-    --bs-body-bg-rgb: 33,37,41;
-    --bs-emphasis-color: #fff;
-    --bs-emphasis-color-rgb: 0,0,0;
-    --bs-secondary-color: rgba(0, 0, 0, 0.75);
-    --bs-secondary-color-rgb: 0,0,0;
-    --bs-secondary-bg: #302d2a;
-    --bs-secondary-bg-rgb: 47,47,45;
-    --bs-tertiary-color: rgba(0, 0, 0, 0.5);
-    --bs-tertiary-color-rgb: 0,0,0;
-    --bs-tertiary-bg: #070605;
-    --bs-tertiary-bg-rgb: 7,6,5;
-    --bs-heading-color: inherit;
-    --bs-link-color: #6ea8fe;
-    --bs-link-hover-color: #8bb9fe;
-    --bs-link-color-rgb: 110,168,254;
-    --bs-link-hover-color-rgb: 139,185,254;
-    --bs-link-decoration: underline;
-
-    --bs-code-color: #29cc7a;
-    --bs-highlight-color: #343a40;
-    --bs-highlight-bg: #f9f9f9;
-    --bs-border-width: 1px;
-    --bs-border-style: solid;
-    --bs-border-color: #dedede;
-    --bs-border-color-translucent: rgba(255, 255, 255, 0.175);
-    --bs-border-radius: 0.375rem;
-    --bs-border-radius-sm: 0.25rem;
-    --bs-border-radius-lg: 0.5rem;
-    --bs-border-radius-xl: 1rem;
-    --bs-border-radius-xxl: 2rem;
-    --bs-border-radius-2xl: var(--bs-border-radius-xxl);
-    --bs-border-radius-pill: 50rem;
-    --bs-box-shadow: 0 0.5rem 1rem rgba(255, 255, 255, 0.15);
-    --bs-box-shadow-sm: 0 0.125rem 0.25rem rgba(255, 255, 255, 0.075);
-    --bs-box-shadow-lg: 0 1rem 3rem rgba(255, 255, 255, 0.175);
-    --bs-box-shadow-inset: inset 0 1px 2px rgba(255, 255, 255, 0.075);
-    --bs-focus-ring-width: 0.25rem;
-    --bs-focus-ring-opacity: 0.25;
-    --bs-focus-ring-color: rgba(235, 241, 255, 0.25);
-    --bs-form-valid-color: #e7694c;
-    --bs-form-valid-border-color: #e7694c;
-    --bs-form-invalid-color: #23c5ba;
-    --bs-form-invalid-border-color: #23c5ba;
+nav, .content {
+    transition: padding 0.5s ease-out 0.2s;
+    
+}
+#sidebar {
+    transition: width 0.5s ease-out 0.2s !important;
 }
 
-/*{
-    color-scheme: dark;
-    --bs-white: #343a40;
-    --bs-light-rgb: 52, 58, 64;
-    --bs-body-color: #dee2e6;
-    --bs-body-color-rgb: 222,226,230;
-    --bs-body-bg: #454d55;
-    --bs-body-bg-rgb: 33,37,41;
-    --bs-emphasis-color: #fff;
-    --bs-emphasis-color-rgb: 255,255,255;
-    --bs-secondary-color: rgba(222, 226, 230, 0.75);
-    --bs-secondary-color-rgb: 222,226,230;
-    --bs-secondary-bg: #343a40;
-    --bs-secondary-bg-rgb: 52,58,64;
-    --bs-tertiary-color: rgba(222, 226, 230, 0.5);
-    --bs-tertiary-color-rgb: 222,226,230;
-    --bs-tertiary-bg: #2b3035;
-    --bs-tertiary-bg-rgb: 43,48,53;
-    --bs-primary-text-emphasis: #6ea8fe;
-    --bs-secondary-text-emphasis: #a7acb1;
-    --bs-success-text-emphasis: #75b798;
-    --bs-info-text-emphasis: #6edff6;
-    --bs-warning-text-emphasis: #ffda6a;
-    --bs-danger-text-emphasis: #ea868f;
-    --bs-light-text-emphasis: #f8f9fa;
-    --bs-dark-text-emphasis: #dee2e6;
-    --bs-primary-bg-subtle: #031633;
-    --bs-secondary-bg-subtle: #161719;
-    --bs-success-bg-subtle: #051b11;
-    --bs-info-bg-subtle: #032830;
-    --bs-warning-bg-subtle: #332701;
-    --bs-danger-bg-subtle: #2c0b0e;
-    --bs-light-bg-subtle: #343a40;
-    --bs-dark-bg-subtle: #1a1d20;
-    --bs-primary-border-subtle: #084298;
-    --bs-secondary-border-subtle: #41464b;
-    --bs-success-border-subtle: #0f5132;
-    --bs-info-border-subtle: #087990;
-    --bs-warning-border-subtle: #997404;
-    --bs-danger-border-subtle: #842029;
-    --bs-light-border-subtle: #495057;
-    --bs-dark-border-subtle: #343a40;
-    --bs-heading-color: inherit;
-    --bs-link-color: #6ea8fe;
-    --bs-link-hover-color: #8bb9fe;
-    --bs-link-color-rgb: 110,168,254;
-    --bs-link-hover-color-rgb: 139,185,254;
-    --bs-code-color: #e685b5;
-    --bs-highlight-color: #dee2e6;
-    --bs-highlight-bg: #664d03;
-    --bs-border-color: #495057;
-    --bs-border-color-translucent: rgba(255, 255, 255, 0.15);
-    --bs-form-valid-color: #75b798;
-    --bs-form-valid-border-color: #75b798;
-    --bs-form-invalid-color: #ea868f;
-    --bs-form-invalid-border-color: #ea868f
-}*/
-
-[data-bs-theme=green] {
-    color-scheme: green;
-    --bs-body-color: #198754;
-    --bs-body-color-rgb: 222,226,230;
-    --bs-body-bg: #198754;
-    --bs-body-bg-rgb: 33,37,41;
-    --bs-emphasis-color: #198754;
-    --bs-emphasis-color-rgb: 255,255,255;
-    --bs-secondary-color: rgba(222, 226, 230, 0.75);
-    --bs-secondary-color-rgb: 222,226,230;
-    --bs-secondary-bg: #343a40;
-    --bs-secondary-bg-rgb: 52,58,64;
-    --bs-tertiary-color: rgba(222, 226, 230, 0.5);
-    --bs-tertiary-color-rgb: 222,226,230;
-    --bs-tertiary-bg: #2b3035;
-    --bs-tertiary-bg-rgb: 43,48,53;
-    --bs-primary-text-emphasis: #6ea8fe;
-    --bs-secondary-text-emphasis: #a7acb1;
-    --bs-success-text-emphasis: #75b798;
-    --bs-info-text-emphasis: #6edff6;
-    --bs-warning-text-emphasis: #ffda6a;
-    --bs-danger-text-emphasis: #ea868f;
-    --bs-light-text-emphasis: #f8f9fa;
-    --bs-dark-text-emphasis: #198754;
-    --bs-primary-bg-subtle: #031633;
-    --bs-secondary-bg-subtle: #161719;
-    --bs-success-bg-subtle: #051b11;
-    --bs-info-bg-subtle: #032830;
-    --bs-warning-bg-subtle: #332701;
-    --bs-danger-bg-subtle: #2c0b0e;
-    --bs-light-bg-subtle: #343a40;
-    --bs-dark-bg-subtle: #1a1d20;
-    --bs-primary-border-subtle: #084298;
-    --bs-secondary-border-subtle: #41464b;
-    --bs-success-border-subtle: #0f5132;
-    --bs-info-border-subtle: #087990;
-    --bs-warning-border-subtle: #997404;
-    --bs-danger-border-subtle: #842029;
-    --bs-light-border-subtle: #495057;
-    --bs-dark-border-subtle: #343a40;
-    --bs-heading-color: inherit;
-    --bs-link-color: #6ea8fe;
-    --bs-link-hover-color: #8bb9fe;
-    --bs-link-color-rgb: 110,168,254;
-    --bs-link-hover-color-rgb: 139,185,254;
-    --bs-code-color: #e685b5;
-    --bs-highlight-color: #dee2e6;
-    --bs-highlight-bg: #664d03;
-    --bs-border-color: #495057;
-    --bs-border-color-translucent: rgba(255, 255, 255, 0.15);
-    --bs-form-valid-color: #75b798;
-    --bs-form-valid-border-color: #75b798;
-    --bs-form-invalid-color: #ea868f;
-    --bs-form-invalid-border-color: #ea868f
-}
-
-body {
-}
-
-.card {
-    background-color: var(--bs-white);
-}
-
-.navbar {
-    background-color: var(--bs-white);
-}
-
-.bg-light {
-    --bs-bg-opacity: 1;
-    background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
-}
-
- .navbar {
-    padding-left: 250px;
-}
-
-[dir="rtl"] .navbar {
-    padding-right: 250px;
-}
-
- .content {
-    padding-left: 250px;
-}
-
-[dir="rtl"] .content {
-    padding-right: 250px;
-}
-
-
-.nowrap{
-    white-space:nowrap;
+.nowrap {
+    white-space: nowrap;
 }
